--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@ title: LFC Denver
 							</section>
 
 							<!-- One -->
-							<section id="one" class="content">
+							<section id="one" class="cta">
+								<div class="content">
 							<!-- Begin MailChimp Signup Form -->
 								<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 								<div id="mc_embed_signup">
 								<form action="//lfcdenver.us12.list-manage.com/subscribe/post?u=7b1b770d7ecbe9a95d170a31f&amp;id=908a18eab5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 								    <div id="mc_embed_signup_scroll">
-									<label for="mce-EMAIL"><h3>Subscribe to our mailing list</h3></label>
+									<h3>Subscribe to our mailing list</h3>
 									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 								    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 								    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7b1b770d7ecbe9a95d170a31f_908a18eab5" tabindex="-1" value=""></div>
@@ -34,6 +35,7 @@ title: LFC Denver
 								    </div>
 								</form>
 								</div>
+							</div>
 							</section>
 
 							<!--End mc_embed_signup-->
