--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: LFC Denver
+title: OLSC Denver
 ---
 				<!-- Main -->
 					<div id="main">
@@ -8,7 +8,7 @@ title: LFC Denver
 						<!-- Banner -->
 							<section id="banner">
 								<header>
-									<h2><img src={{site.url}}/images/lfcdenver-brand-white.png alt="LFC Denver"></h2>
+									<h2><img src={{site.url}}/images/olsc.png alt="OLSC Denver"></h2>
 									<h6>Official Liverpool FC Supporters Club<br />
 									Denver, Colorado, USA</h6>
 								</header>
@@ -62,8 +62,8 @@ title: LFC Denver
 							<section id="two" class="spotlight">
 								<div class="image"><img src="{{site.url}}/images/olsc.png" alt="" /></div>
 								<div class="content">
-									<h2>About LFC Denver</h2>
-									<p>Formed in January 2011 as the Colorado Reds, LFC Denver became an Official Liverpool Supporters Club in 2013. Our goal is to provide local and visiting Liverpool FC fans an enjoyable and welcoming environment to come support our favorite football club.</p>
+									<h2>About OLSC Denver</h2>
+									<p>Formed in January 2011 as the Colorado Reds, OLSC Denver became an Official Liverpool Supporters Club in 2013. Our goal is to provide local and visiting Liverpool FC fans an enjoyable and welcoming environment to come support our favorite football club.</p>
 								</div>
 							</section>
 
@@ -72,7 +72,7 @@ title: LFC Denver
 								<div class="image"><img src="{{site.url}}/images/abbey.jpg" alt="" /></div>
 								<div class="content">
 									<h2>The Abbey Tavern</h2>
-									<p>LFC Denver's home pub since 2014, the Abbey Tavern is owned and run by Liverpool supporters and is open for every televised Liverpool match.</p>
+									<p>OLSC Denver's home pub since 2014, the Abbey Tavern is owned and run by Liverpool supporters and is open for every televised Liverpool match.</p>
 									<ul class="actions">
 										<li><a href="http://theabbeytaverndenver.com" target="blank" class="button big">More</a></li>
 									</ul>
@@ -84,7 +84,7 @@ title: LFC Denver
 								<div class="image"><img src="{{site.url}}/images/lfc_denver_badge.png" alt="" /></div>
 								<div class="content">
 									<h2>News</h2>
-									<p>Catch up on all of the latest news and events from LFC Denver here.</p>
+									<p>Catch up on all of the latest news and events from OLSC Denver here.</p>
 									<ul class="actions">
 										<li><a href="{{site.url}}/news" class="button big">More</a></li>
 									</ul>
