--- a/thanks/index.html
+++ b/thanks/index.html
@@ -1,16 +1,13 @@
 ---
 layout: default
-title: Thanks from LFC Denver
+title: Thanks from OLSC Denver
 ---
 
 <div id="main">
-
-  <!-- Content -->
+    <!-- Content -->
     <section id="content" class="default">
-      <div class="content">
-
-      <p>Thanks for your inquiry. We will be in touch.</p>
-
-      </div>
+        <div class="content">
+            <p>Thanks for your inquiry. We will be in touch.</p>
+        </div>
     </section>
 </div>
