--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: OLSC Denver
 						<!-- Banner -->
 							<section id="banner">
 								<header>
-									<h2><img src={{site.url}}/images/olsc.png alt="OLSC Denver"></h2>
+									<h2><img src={{site.url}}/images/OSC-Logos-Phase3-H_Denver.png alt="OLSC Denver" style="max-height: 10em"></h2>
 									<h6>Official Liverpool FC Supporters Club<br />
 									Denver, Colorado, USA</h6>
 								</header>
